<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/newGroup"
        android:title="@string/new_group" />
    <item
        android:id="@+id/newBroadcast"
        android:title="@string/new_broadcast" />
    <item
        android:id="@+id/web"
        android:title="@string/whatsapp_web" />
    <item
        android:id="@+id/starMessage"
        android:title="@string/starred_message" />
    <item
        android:id="@+id/setting"
        android:title="@string/settings" />


</menu>